# smart-support-env

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
__pycache__/: inference.cpython-310.pyc.1354651039376
server/: app.py
server/__pycache__/: app.cpython-310.pyc.1354651039376  app.cpython-310.pyc.2423028861104
submit_repo/: Dockerfile  inference.py
submit_repo/server/: __init__.py
submit_repo/support_env/: client.py  graders.py  models.py
support_env/: __init__.py  env.py  tasks.py
support_env/__pycache__/: __init__.cpython-310.pyc.1354651481488  client.cpython-310.pyc.1354651481488  env.cpython-310.pyc.1354651500336  graders.cpython-310.pyc.1354651479360  models.cpython-310.pyc.1354651479360  models.cpython-310.pyc.2705604487536  tasks.cpython-310.pyc.1354651500432
